1999-05-28  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* AUTHORS: Modified.

	* NEWS: Modified.

	* main.cc (parse_options): Use getopt_long unconditionally.

	* configure.in: Removed tests for <getopt.h> and getopt_long.

	* Makefile.am (rglclock_SOURCES): Add getopt.c and getopt1.c.
	(noinst_HEADERS): Add getopt.h.

	* getopt.h, getopt.c, getopt1.c: New file, copied from glibc 2.1.

	* THANKS: New file.  Also regenerate Makefile.in.

1999-05-22  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* NEWS: Modified.

	* configure.in: Set VERSION to 1.3.2.

	* main.cc (parse_options): Add new options.
	(display_help): New function.
	(create_widget): Show the menu bar only if opt_hide_menu_bar's
	value is false.
	(main): Handle the --help option.

	* TODO: Modified.

1999-05-15  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* main.cc: Include <sys/stat.h>.

	* NEWS: Modified.

	* configure.in: Add check for mkdir.
	Set VERSION to 1.3.1.

	* main.cc (main): Make ~/.rglclock directory.

	* clockoptions.cc (create_widget): Put unit after the spin button.

	* glclock.cc (update): Draw only for drawable widgets.

	* rglclock.1: Remove keyword substitutions for Package and
	Version.

	* configure.in: Remove PRCS keyword substitutions.

	* TODO: Modified.

1999-05-04  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* TODO: Modified.

	* main.cc (main): Add p as a callback of c.
	(main): Remove save before exit.

	* profile.h (options_callback): Add glclock::options_callback to
	virtual base class.

	* profile.cc (options_changed): New function.

	* glclock.cc (remove_callback, add_callback): New functions.
	(set_update_rate): Call all callbacks.

	* glclock.h (class glclock): Add struct options_callback.
	(class glclock): Add member callbacks.

	* Makefile.am (libclock_a_SOURCES): Move glclock.cc and about.cc
	from rglclock_SOURCES.

	* glclock.cc (glclock): Remove creation of a item factory.
	(handle_button_event): Remove the case for button-3.