@@ -1,3 +1,10 @@
+1999-07-13  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>
+
+	* glclock.cc (handle_expose_event): Add drawing code.
+	(update): #if out drawing code and use gtk_widget_queue_draw
+	instead.
+	(create_widget): Connect "expose_event" to its handler.
+
 1999-05-28  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>
 
 	* AUTHORS: Modified.
